css/styles.css
body {
  background-image: url(https://img-new.cgtrader.com/items/671249/905a8ffe7a/star-field-space-background-3d-model.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
  margin: 0;
  padding: 0;
}

body h2, body h3 {
  font-family: monospace;
  text-shadow: 1px 1px red;
}

.btn {
  background-color: red;
  color: white;
  text-decoration: none;
  border: 2px solid blue;
  border-radius: 0;
  border-top: none;
  border-left: none;
}

/* Container */
.container {
  border: 25px solid black;
  border-bottom: 2px solid black;
  padding: 10px;
  padding-bottom: 0;
}

/* Nav bar*/
.navbar {
  background-color: black;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  border-radius: 0;
  border-bottom: 1px solid red;
}

.navbar p {
  color: white;
  text-align: center;
  padding-top: 10px;
}

.navbar ul {
  padding-top: 10px;
}

.navbar li {
  list-style: none;
  display: inline;
  padding-right: 5px;
}

.navbar a {
  text-decoration: none;
  color: white;
  padding-top: 10px;
}

/* Jumbotron */
.jumbotron {
  margin-top: 0px;
  border: 2px solid rgb(70, 80, 240);
  text-align: center;
  margin-bottom: 0;
}

.jumbotron h1 {
  font-family: sans-serif;
  color: black;
}

.jumbotron button {
  color: white;
}

.jumbotron a {
  text-decoration: none;
  color: white;
}

/* About */ 
.about {
  border: 2px solid rgb(70, 80, 240);
  margin-top: 0;
  background-color: lightgray;
  color: black;
}

#aboutTop {
  text-align: center;
}

.about .row {
  margin-left: 100px;
}

.about h3 {
  margin-left: 50px;
}

/* Projects */
.projects {
  border: 2px solid rgb(70, 80, 240);
  margin-top: 0;
  background-color: lightgray;
  color: black;
  text-align: center;
}

.projects .card {
  border: 2px solid rgb(70, 80, 240);
  margin: 50px;
}

.projects .card .card-img-top {
  width: 100%;
  height: 30%;
  border-bottom: 2px solid rgb(70, 80, 240);
}

.projects .card .btn {
  margin-bottom: 10px;
}

/* Interests */
.interests {
  border: 2px solid rgb(70, 80, 240);
  margin-top: 0;
  background-color: lightgray;
  color: black;
  text-align: center;
}

.interests img {
  width: 600px;
  margin: 10px;
}

#videogames {
  border-bottom: 1px solid red;
  margin-left: 100px;
  margin-right: 100px;
}

#research {
  border-bottom: 1px solid red;
  margin-left: 100px;
  margin-right: 100px;
}

#interests {
  border-bottom: 1px solid red;
  margin-left: 100px;
  margin-right: 100px;
}

/* Contact*/
.contact {
  border: 2px solid rgb(70, 80, 240);
  margin-top: 0;
  background-color: lightgray;
  color: black;
}

.contact h2 {
  text-align: center;
}

.contact ul {
  list-style-type: none;
  text-align: center;
}

.contact li {
  display: inline;
}

.contact img {
  width: 25px;
}

